# xy_django_serializer

./: MANIFEST.in  README.md  pyproject.toml  setup.py
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
samples/xy_web_server_demo/: requirements.txt
samples/xy_web_server_demo/source/Runner/: Runner.py
samples/xy_web_server_demo/source/Runner/Admin/: db.sqlite3
samples/xy_web_server_demo/source/Runner/Admin/Demo/: serializers.py
samples/xy_web_server_demo/source/Runner/Admin/Demo/migrations/: 0003_mdemo_image.py
samples/xy_web_server_demo/source/Runner/Admin/Resource/: models.py  serializers.py
samples/xy_web_server_demo/source/Runner/Admin/xy_web_server_demo/: settings.py
samples/xy_web_server_demo/source/Runner/RequestHandlerDemo/: Demoes.py
xy_django_serializer/: __init__.py  serializers.py
